--- a/digires/index/base.html
+++ b/digires/index/base.html
@@ -25,12 +25,12 @@
                 <ul>
             </nav>
 
-            {% if request.user.is_authenticated %}
+            <!-- {% if request.user.is_authenticated %}
                 <p>Hello, {{request.user}}</p>
                 <a id="log" href="{% url 'logout' %}">Logout</a>
             {% else %}
                 <a id="log" href="{% url 'login' %}">Login</a>
-            {% endif %}
+            {% endif %} -->
 
         </header>
         
